# axum-oauth

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  routes.rs  state.rs
src/oauth/: database.rs  error.rs  mod.rs  rhodos_scopes.rs  scopes.rs  solicitor.rs  state.rs  templates.rs
src/oauth/database/: clientmap.rs  mod.rs
src/oauth/database/resource/: client.rs  mod.rs  user.rs
src/oauth/endpoint/: mod.rs
src/oauth/models/: client.rs  mod.rs
src/oauth/primitives/: key.rs  mod.rs  registrar.rs  scopes.rs
src/oauth/routes/: client.rs  index.rs  mod.rs  oauth.rs  signin.rs  signout.rs  signup.rs
svelte-frontend/: package-lock.json  package.json
svelte-frontend/src/: app.d.ts  app.html  hooks.server.ts  stores.ts
svelte-frontend/src/lib/: session.ts  user.ts
svelte-frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
svelte-frontend/src/routes/authorize/: +server.ts  store.js
svelte-frontend/src/routes/login/: +page.server.ts  +page.svelte
svelte-frontend/src/routes/logout/: +page.server.ts
svelte-frontend/src/routes/profile/: +page.server.ts  +page.svelte
svelte-frontend/src/routes/protected/: +page.server.ts  +page.svelte
templates/: authorize.html  base.html  client.html  index.html
tests/api/: client.rs  helpers.rs  index.rs  main.rs  oauth_client_helper.rs  signin.rs  signout.rs  signup.rs  user.rs
