[package]
name = "axum-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
axum = { version = "0.6.1", features = ["headers"] }
json = "0.12.4"
jsonwebtoken = "8.2.0"
once_cell = "1.17.0"
oxide-auth-axum = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
