[package]
name = "axum-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.4.1", features = ["std"] }
askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.2.1"
async-session = "3.0.0"
async-trait = "0.1.61"
axum = { version = "0.6.1", features = ["headers"] }
axum-macros = "0.3.1"
axum-sessions = "0.4.1"
json = "0.12.4"
jsonwebtoken = "8.2.0"
nanoid = "0.4.0"
once_cell = "1.17.0"
oxide-auth = "0.5"
oxide-auth-async = "0.1.0"
oxide-auth-axum = "0.3.0"
reqwest = { version = "0.11.14", features = ["cookies", "json"] }
secrecy = "0.8.0"
#oxide-auth = { git = "https://github.com/mtelahun/oxide-auth", rev="e7e3d27" }
#oxide-auth-axum = { git = "https://github.com/mtelahun/oxide-auth", rev="305be9d" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
