[package]
name = "axum-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.0", features = ["std"] }
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
async-session = "3.0.0"
async-trait = "0.1.66"
axum = { version = "0.6.11", features = ["headers"] }
axum-macros = "0.3.6"
axum-sessions = "0.4.1"
csrf = "0.4.1"
futures = "0.3.27"
json = "0.12.4"
jsonwebtoken = "8.2.0"
nanoid = "0.4.0"
once_cell = "1.17.1"
oxide-auth = "0.5"
oxide-auth-async = "0.1.0"
oxide-auth-axum = "0.3.0"
pkce = "0.2.0"
secrecy = "0.8.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded = "0.7.1"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"

[dev-dependencies]
html-escape = "0.2.13"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["cookies", "json"] }
urlencoding = "2.1.2"
